cambiado desde VIM y terminal

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <body>
 	<h1>Buenas noches, Bienvenidos</h1>
 	<h2>Gracias por venir aquí!</h2>
-	  <p>dasldkasdjasklj</p>
-  </body>
+	  <p>cambiado con VIM</p>
+  </bodyear
+  				
 </html>
