--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Mi título</title>
   </head>
   <body>
+  <div id="cabecera"></div>
 	<h1>Buenas noches, Bienvenidos</h1>
 	<h2>Gracias por venir aquí!</h2>
 	  <p>dasldkasdjasklj</p>
